[gd_scene load_steps=3 format=3 uid="uid://5skvynkn2pnm"]

[ext_resource type="PackedScene" uid="uid://cpt8hpkrbrsgd" path="res://tools/graph_node_base.tscn" id="1_bop1e"]
[ext_resource type="Script" uid="uid://bljsspo6lfsqh" path="res://tools/priority_graph_node.gd" id="2_ntkto"]

[node name="PriorityGraphNode" node_paths=PackedStringArray("remove_slot_button", "add_slot_button") instance=ExtResource("1_bop1e")]
title = "Priority node"
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
script = ExtResource("2_ntkto")
remove_slot_button = NodePath("HBoxContainer/RemoveButton")
add_slot_button = NodePath("HBoxContainer/AddButton")

[node name="OptionButton" parent="." index="1"]
visible = false

[node name="Label" parent="." index="2"]
text = "Input"

[node name="Label2" type="Label" parent="." index="4"]
layout_mode = 2
text = "1"
horizontal_alignment = 2

[node name="Label3" type="Label" parent="." index="5"]
layout_mode = 2
text = "2"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="." index="6"]
layout_mode = 2

[node name="RemoveButton" type="Button" parent="HBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
text = "-"

[node name="AddButton" type="Button" parent="HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
text = "+"

[connection signal="pressed" from="HBoxContainer/RemoveButton" to="." method="_on_remove_slot_pressed"]
[connection signal="pressed" from="HBoxContainer/AddButton" to="." method="_on_add_slot_pressed"]
